test/fails/nomain.imp.int
No function with the id "main" exists.
